# betflow

./: .env  .gitignore  README.md  pyproject.toml  test_bf_list_event_types.py  test_bf_list_event_types_rest.py  test_bf_login.py  test_env.py
config/: filters.yaml  filters_v0_backup.yaml
docs/: PROJECT_MAP.md  STATE.md  TRADING_IMPLEMENTATION.md  TRADING_IMPLEMNTATION.md  TRADING_PHILOSOPHY.md  WORKING_MODEL.md
secrets/: client-2048.crt  client-2048.key
src/betflow/: filter_config.py  logging.py  main.py  settings.py
src/betflow.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/betflow/analysis/: market_rules.py  structure_metrics.py
src/betflow/betfair/: client.py
src/betflow/markets/: market_rules.py  structure_metrics.py
src/betflow/scripts/: _old_structure_metrics_module.py  discover_markets.py  inspect_market_structure.py  ladder_probe.py  market_ladder.py  shape_probe.py  shape_scan.py  test_connection.py  test_session_retry.py
src/betflow/services/: filter_config.py  horse_selection.py  market_discovery.py  market_ladder.py  market_shape.py  ticks.py
